--- a/HOME/html/login.html
+++ b/HOME/html/login.html
@@ -45,7 +45,7 @@
 					dataType: 'json',
 					async: true,
 					data: {
-						username: $('#agent').val(),
+						email: $('#agent').val(),
 						password: $('#password').val()
 					},
 					error: function(request) { //失败的话
