--- a/HOME/html/reg.html
+++ b/HOME/html/reg.html
@@ -11,8 +11,8 @@
 			<div class="reg-logo">
 				<form id="signupForm" method="post" action="" class="zcform">
 					<p class="clearfix">
-						<label class="one" for="agent">用户名：</label>
-						<input id="agent" name="agent" type="text" class="required" value placeholder="请输入您的用户名" />
+						<label class="one" for="agent">电子邮箱：</label>
+						<input id="agent" name="agent" type="text" class="required" value placeholder="请输入您的电子邮箱" />
 					</p>
 
 					<p class="clearfix">
@@ -23,25 +23,58 @@
 						<label class="one" for="confirm_password">确认密码：</label>
 						<input id="confirm_password" name="confirm_password" type="password" class="{required:true,equalTo:'#password'}" value placeholder="请再次输入密码" />
 					</p>
-					<!--<p class="clearfix agreement">
-        	<input type="checkbox" />
-            <b class="left">已阅读并同意<a href="#">《用户协议》</a></b>
-        </p>-->
-					<p class="clearfix"><input class="submit" type="button" value="立即注册" onclick="register()"/></p>
+
+					<p class="clearfix">
+						<label class="one" for="confirm_password">验证码：</label>
+						<input id="verify" name="verify" type="text" class="required" value placeholder="请输入验证码" style="width:120px" />
+						<input class="logo-a" type="button" value="发送邮箱验证码" onclick="getVerificationcode()" style="margin-left:10px;margin-top:0px;height: 49px;" />
+					</p>
+
+					<p class="clearfix agreement">
+						<input type="checkbox" />
+						<b class="left">已阅读并同意<a href="#">《用户协议》</a></b>
+					</p>
+					<p class="clearfix"><input class="submit" type="button" value="立即注册" onclick="register()" /></p>
 				</form>
 				<div class="reg-logo-right">
 					<h3>如果您已有账号，请</h3>
 					<a onclick="golog()" class="logo-a" ">立即登录</a>
 				</div>
 				<!--reg-logo-right/-->
-				<div class="clears"></div>
+				<div class="clears "></div>
 			</div>
 			<!--reg-logo/-->
 		</div>
 		<!--width1190/-->
 
-		<script type="text/javascript">
+		<script type="text/javascript ">
 			var url_register = 'user/register';
+			var url_verify = 'user/getVerificationcode';
+			
+			function getVerificationcode(){
+				$.ajax({
+					url: base_url + url_verify,
+					type: 'post', //提交的方式
+					dataType: 'json',
+					async: true,
+					data: {
+						email: $('#agent').val()
+					},
+					error: function(request) { //失败的话
+						$.messager.alert('ERROR', 'Connection error');
+					},
+					success: function(result) {
+						if(result.code==200){
+							//alert('注册成功');
+							//$.messager.alert('提示', '注册成功');
+							//$("#bodycontent ").load("html/login.html ");
+						}
+
+					}
+				});
+
+	
+			}
 
 			function register() {
 				$.ajax({
@@ -50,18 +83,15 @@
 					dataType: 'json',
 					async: true,
 					data: {
-						username: $('#agent').val(),
-						password: $('#password').val()
+						email: $('#agent').val(),
+						password: $('#password').val(),
+						verificationcode:$('#verify').val()
 					},
 					error: function(request) { //失败的话
 						$.messager.alert('ERROR', 'Connection error');
 					},
 					success: function(result) {
-
-						
 						if(result.code==200){
-							//alert('注册成功');
-							//$.messager.alert('提示', '注册成功');
 							$("#bodycontent").load("html/login.html");
 						}
 
@@ -72,7 +102,7 @@
 			
 			
 			function golog(){
-				$("#bodycontent").load("html/login.html");
+				$("#bodycontent ").load("html/login.html ");
 			}
 		</script>
 
